<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.android.smartphonequiz.MainActivity">

    <ImageView
        style="@style/backgroundImage"
        android:src="@drawable/smartphone_quiz_main_activity_background" />

    <FrameLayout style="@style/frameLayout">

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/linearLayout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_1"
                style="@style/questionTextView"
                android:layout_marginTop="@dimen/marginPadding_32dp"
                android:text="@string/question_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginPadding_16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/question_1_choice_1"
                        style="@style/checkBox"
                        android:text="@string/question_1_choice_1" />

                    <CheckBox
                        android:id="@+id/question_1_choice_2"
                        style="@style/checkBox"
                        android:text="@string/question_1_choice_2" />

                    <CheckBox
                        android:id="@+id/question_1_choice_3"
                        style="@style/checkBox"
                        android:text="@string/question_1_choice_3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/marginPadding_16dp"
                    android:paddingStart="@dimen/marginPadding_16dp">

                    <CheckBox
                        android:id="@+id/question_1_choice_4"
                        style="@style/checkBox"
                        android:text="@string/question_1_choice_4" />

                    <CheckBox
                        android:id="@+id/question_1_choice_5"
                        style="@style/checkBox"
                        android:text="@string/question_1_choice_5" />

                    <CheckBox
                        android:id="@+id/question_1_choice_6"
                        style="@style/checkBox"
                        android:text="@string/question_1_choice_6" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/question_2"
                style="@style/questionTextView"
                android:text="@string/question_2" />

            <RadioGroup style="@style/radioGroup">

                <RadioButton
                    android:id="@+id/question_2_choice_1"
                    style="@style/radioButton"
                    android:text="@string/question_2_choice_1" />

                <RadioButton
                    android:id="@+id/question_2_choice_2"
                    style="@style/radioButton"
                    android:text="@string/question_2_choice_2" />

                <RadioButton
                    android:id="@+id/question_2_choice_3"
                    style="@style/radioButton"
                    android:text="@string/question_2_choice_3" />

            </RadioGroup>

            <TextView
                android:id="@+id/question_3"
                style="@style/questionTextView"
                android:text="@string/question_3" />


            <EditText
                android:id="@+id/question_3_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginPadding_16dp"
                android:backgroundTint="@color/editTextBackgroundTintColor"
                android:hint="@string/question_3_edit_text_hint"
                android:maxLength="7"
                android:textColor="@color/textColor"
                android:textColorHint="@color/editTextHintColor" />

            <TextView
                android:id="@+id/question_4"
                style="@style/questionTextView"
                android:text="@string/question_4" />

            <RadioGroup style="@style/radioGroup">

                <RadioButton
                    android:id="@+id/question_4_choice_1"
                    style="@style/radioButton"
                    android:text="@string/question_4_choice_1" />

                <RadioButton
                    android:id="@+id/question_4_choice_2"
                    style="@style/radioButton"
                    android:text="@string/question_4_choice_2" />

                <RadioButton
                    android:id="@+id/question_4_choice_3"
                    style="@style/radioButton"
                    android:text="@string/question_4_choice_3" />

            </RadioGroup>

            <TextView
                android:id="@+id/question_5"
                style="@style/questionTextView"
                android:text="@string/question_5" />

            <RadioGroup style="@style/radioGroup">

                <RadioButton
                    android:id="@+id/question_5_choice_1"
                    style="@style/radioButton"
                    android:text="@string/question_5_choice_1" />

                <RadioButton
                    android:id="@+id/question_5_choice_2"
                    style="@style/radioButton"
                    android:text="@string/question_5_choice_2" />

                <RadioButton
                    android:id="@+id/question_5_choice_3"
                    style="@style/radioButton"
                    android:text="@string/question_5_choice_3" />

            </RadioGroup>

            <TextView
                android:id="@+id/question_6"
                style="@style/questionTextView"
                android:text="@string/question_6" />

            <RadioGroup style="@style/radioGroup">

                <RadioButton
                    android:id="@+id/question_6_choice_1"
                    style="@style/radioButton"
                    android:text="@string/question_6_choice_1" />

                <RadioButton
                    android:id="@+id/question_6_choice_2"
                    style="@style/radioButton"
                    android:text="@string/question_6_choice_2" />

                <RadioButton
                    android:id="@+id/question_6_choice_3"
                    style="@style/radioButton"
                    android:text="@string/question_6_choice_3" />

            </RadioGroup>

            <TextView
                android:id="@+id/question_7"
                style="@style/questionTextView"
                android:text="@string/question_7" />

            <RadioGroup style="@style/radioGroup">

                <RadioButton
                    android:id="@+id/question_7_choice_1"
                    style="@style/radioButton"
                    android:text="@string/question_7_choice_1" />

                <RadioButton
                    android:id="@+id/question_7_choice_2"
                    style="@style/radioButton"
                    android:text="@string/question_7_choice_2" />

                <RadioButton
                    android:id="@+id/question_7_choice_3"
                    style="@style/radioButton"
                    android:text="@string/question_7_choice_3" />

            </RadioGroup>

            <TextView
                android:id="@+id/question_8"
                style="@style/questionTextView"
                android:text="@string/question_8" />

            <RadioGroup style="@style/radioGroup">

                <RadioButton
                    android:id="@+id/question_8_choice_1"
                    style="@style/radioButton"
                    android:text="@string/question_8_choice_1" />

                <RadioButton
                    android:id="@+id/question_8_choice_2"
                    style="@style/radioButton"
                    android:text="@string/question_8_choice_2" />

                <RadioButton
                    android:id="@+id/question_8_choice_3"
                    style="@style/radioButton"
                    android:text="@string/question_8_choice_3" />

            </RadioGroup>

            <TextView
                android:id="@+id/question_9"
                style="@style/questionTextView"
                android:text="@string/question_9" />

            <RadioGroup style="@style/radioGroup">

                <RadioButton
                    android:id="@+id/question_9_choice_1"
                    style="@style/radioButton"
                    android:text="@string/question_9_choice_1" />

                <RadioButton
                    android:id="@+id/question_9_choice_2"
                    style="@style/radioButton"
                    android:text="@string/question_9_choice_2" />

                <RadioButton
                    android:id="@+id/question_9_choice_3"
                    style="@style/radioButton"
                    android:text="@string/question_9_choice_3" />

            </RadioGroup>

            <TextView
                android:id="@+id/question_10"
                style="@style/questionTextView"
                android:text="@string/question_10" />

            <CheckBox
                android:id="@+id/question_10_choice_1"
                style="@style/checkBox"
                android:text="@string/question_10_choice_1" />

            <CheckBox
                android:id="@+id/question_10_choice_2"
                style="@style/checkBox"
                android:text="@string/question_10_choice_2" />

            <CheckBox
                android:id="@+id/question_10_choice_3"
                style="@style/checkBox"
                android:text="@string/question_10_choice_3" />

            <Button
                android:id="@+id/check_results_button"
                style="@style/button"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/marginPadding_32dp"
                android:layout_marginTop="@dimen/marginPadding_32dp"
                android:onClick="calculateScore"
                android:text="@string/check_results_button" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>