<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        style="@style/backgroundImage"
        android:src="@drawable/smartphone_quiz_start_activity_background" />

    <FrameLayout style="@style/frameLayout">

    </FrameLayout>

    <TextView
        android:id="@+id/welcome_message"
        style="@style/messagesTextView"
        android:layout_above="@id/name_edit_text"
        android:text="@string/welcome_message" />

    <EditText
        android:id="@+id/name_edit_text"
        style="@style/editText"
        android:hint="@string/name_edit_text_hint" />

    <Button
        android:id="@+id/start_quiz_button"
        style="@style/button"
        android:layout_below="@id/name_edit_text"
        android:layout_centerHorizontal="true"
        android:onClick="startQuiz"
        android:text="@string/start_quiz_button" />

</RelativeLayout>