<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/smartphone_quiz_results_activity_background" />

    <FrameLayout
        style="@style/FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <TextView
        android:id="@+id/results_text_view"
        style="@style/MessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/results_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginPadding_32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/share_results_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginPadding_8dp"
            android:layout_marginRight="@dimen/marginPadding_8dp"
            android:onClick="shareResults"
            android:text="@string/share_results_button" />

        <Button
            android:id="@+id/restat_quiz_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginPadding_8dp"
            android:layout_marginStart="@dimen/marginPadding_8dp"
            android:onClick="restartQuiz"
            android:text="@string/restart_quiz_button" />

    </LinearLayout>

</RelativeLayout>